update Phoenix view for MCP9808

--- a/phoenix_ricc_okinawa/lib/phoenix_ricc_okinawa_web/live/temp_live.html.leex
+++ b/phoenix_ricc_okinawa/lib/phoenix_ricc_okinawa_web/live/temp_live.html.leex
@@ -1,4 +1,4 @@
-<h2>温度・湿度表示</h2>
+<h2>温度表示</h2>
 
 <div>temp: <%= @temp %></div>
 
@@ -14,6 +14,7 @@
     </div>
 </form> %>
 
+<br /><br /><br /><br /><br />
 
 <h2>Curl Sample</h2>
 <pre>
